--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
-<form style="margin: 1em" action="/feedback.php" method="post" name=feedbackform>
-<textarea style="width: 100%;" rows=10 name=msg></textarea>
+<form id=thing style="margin: 1em" action="/feedback.php" method="post" name=feedbackform>
+<textarea style="width: 100%; border-radius: 5px;" rows=10 required placeholder="Please comment" name=msg></textarea>
 <input type=submit>
 </form>
 <script src=/main.js></script>
