--- a/form.html
+++ b/form.html
@@ -1,5 +1,6 @@
 <form id=thing style="margin: 1em" action="/feedback.php" method="post" name=feedbackform>
 <textarea style="width: 100%; border-radius: 5px;" rows=10 required placeholder="Please comment" name=msg></textarea>
 <input type=submit>
+<p style="font-size: x-small; display: inline;">Powered by <a href="https://github.com/kaihendry/vanilla-php-feedback-form">Vanilla PHP feedback form</a></p>
 </form>
 <script src=/main.js></script>
