--- a/feedback/index.html
+++ b/feedback/index.html
@@ -1,4 +1,4 @@
-<form onsubmit="return feedback(this)" style="margin: 1em" action="/feedback/feedback.php" method="post" name="feedbackform">
+<form onsubmit="return feedback(this)" style="margin: 1em; transition: all .3s;" action="/feedback/feedback.php" method="post">
 <textarea style="width: 100%; border-radius: 5px;" rows=10 required placeholder="Please comment" name=msg></textarea>
 <input type=submit>
 <p style="font-size: x-small; display: inline;">Powered by <a href="https://github.com/kaihendry/vanilla-php-feedback-form">Vanilla PHP feedback form</a></p>
