--- a/feedback/index.html
+++ b/feedback/index.html
@@ -1,6 +1,23 @@
-<form onsubmit="return feedback(this)" style="margin: 1em; transition: all .3s;" action="/feedback/feedback.php" method="post">
-<textarea style="width: 100%; border-radius: 5px;" rows=10 required placeholder="Please comment" name=msg></textarea>
-<input type=submit>
+<form onsubmit="return feedback(this);" style="margin: 1em;" action="/feedback/feedback.php" method="post">
+
+<p class=field>
+<label for=from class=fieldname>
+Your email address (leave blank if you want to be anonymous)
+</label>
+<input style="width: 100%; display: block;" type=email id=from name=from>
+</p>
+
+<p class="field">
+
+<label for="msg" class="fieldname">
+Your feedback
+</label>
+<textarea style="width: 100%; border-style: inset; border-width: 2px;" required id="msg" name="msg" rows="6"></textarea>
+</p>
+
+<input id=send type=submit>
+
 <p style="font-size: x-small; display: inline;">Powered by <a href="https://github.com/kaihendry/vanilla-php-feedback-form">Vanilla PHP feedback form</a></p>
+
 </form>
 <script src=/feedback/feedback.js></script>
