Validate From email address

--- a/feedback/index.html
+++ b/feedback/index.html
@@ -2,7 +2,7 @@
 
 <p class=field>
 <label for=from class=fieldname>
-Your email address (leave blank if you want to be anonymous)
+Your email address - leave blank if you want to be anonymous - for my eyes only
 </label>
 <input style="width: 100%; display: block;" type=email id=from name=from>
 </p>
