--- a/feedback/index.html
+++ b/feedback/index.html
@@ -1,10 +1,19 @@
-<form onsubmit="return feedback(this);" style="margin: 1em;" action="/feedback/feedback.php" method="post">
+<style scoped>
+.success { background-color: green; color: white; }
+.fail { background-color: red; color: white; }
+.fb { margin: 1em; }
+.fb input[type=email] { width: 100%; display: block; }
+.fb textarea { width: 100%; border-style: inset; border-width: 2px; }
+.fb footer { font-size: x-small; display: inline; }
+</style>
+
+<form onsubmit="return feedback(this);" class=fb action="/feedback/feedback.php" method="post">
 
 <p class=field>
 <label for=from class=fieldname>
 Your email address - leave blank if you want to be anonymous - for my eyes only
 </label>
-<input style="width: 100%; display: block;" type=email id=from name=from>
+<input type=email id=from name=from>
 </p>
 
 <p class="field">
@@ -12,12 +21,12 @@ Your email address - leave blank if you want to be anonymous - for my eyes only
 <label for="msg" class="fieldname">
 Your feedback
 </label>
-<textarea style="width: 100%; border-style: inset; border-width: 2px;" required id="msg" name="msg" rows="6"></textarea>
+<textarea required id="msg" name="msg" rows="6"></textarea>
 </p>
 
 <input id=send type=submit>
 
-<p style="font-size: x-small; display: inline;">Powered by <a href="https://github.com/kaihendry/vanilla-php-feedback-form">Vanilla PHP feedback form</a></p>
+<footer>Powered by <a href="https://github.com/kaihendry/vanilla-php-feedback-form">Vanilla PHP feedback form</a></footer>
 
 </form>
 <script src=/feedback/feedback.js></script>
