More consistent CSS

--- a/feedback/index.html
+++ b/feedback/index.html
@@ -2,8 +2,8 @@
 .success { background-color: green; color: white; }
 .fail { background-color: red; color: white; }
 .fb { margin: 1em; }
-.fb input[type=email] { width: 100%; display: block; }
-.fb textarea { width: 100%; border-style: inset; border-width: 2px; }
+.fb input[type=email] { width: 100%; border: solid 2px black; padding: 10px; transition: border 0.3s; display: block; }
+.fb textarea { width: 100%; border-style: inset; padding: 10px; border-width: 2px; }
 .fb footer { font-size: x-small; display: inline; }
 </style>
 
