Convert to formData POST

--- a/feedback/index.html
+++ b/feedback/index.html
@@ -1,15 +1,15 @@
 <style scoped>
-.success { background-color: green; color: white; }
-.fail { background-color: red; color: white; }
+.fb.success { background-color: green; color: white; }
+.fb.fail { background-color: red; color: white; }
 .fb { margin: 1em; }
 .fb input[type=email] { width: 100%; border: solid 2px black; padding: 10px; transition: border 0.3s; display: block; }
 .fb textarea { width: 100%; border-style: inset; padding: 10px; border-width: 2px; }
 .fb footer { font-size: x-small; display: inline; }
-input[type=submit]:disabled  { animation: glow 3s ease-in-out infinite; }
+.fb input[type=submit]:disabled  { animation: glow 3s ease-in-out infinite; }
 @keyframes glow { 50% { box-shadow: 0 0 5px #aaf; } }
 </style>
 
-<form onsubmit="return feedback(this);" class=fb action="/feedback/feedback.php" method="post">
+<form onsubmit="return feedback(this);" class=fb action="/feedback/feedback.php" method="POST">
 
 <p class=field>
 <label for=from class=fieldname>
