--- a/feedback/index.html
+++ b/feedback/index.html
@@ -11,9 +11,9 @@
 
 <p class=field>
 <label for=from class=fieldname>
-Your email address - leave blank if you want to be anonymous - for my eyes only
+Your email address
 </label>
-<input type=email id=from name=from>
+<input type=email required id=from name=from>
 </p>
 
 <p class="field">
